demos/multi-team/team-a-version-2/app-repo/k8s_headerbased/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service-version-2
  namespace: app-a
spec:
  selector:
    app: app-a
    version: "2"
  ports:
    - name: http
      port: 80
      targetPort: 8080
